--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,10 +2,38 @@
 <html>
 <head>
 	<title>testando pages</title>
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
-<p>funciona pfv</p>
+<h1>Our menu</h1>
+
+<div>
+	<section class="chicken col-lg-4 col-md-6 col-sm-12">
+		<h3 id="chicken">Chicken</h3>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat.</p>
+	</section>
+
+	<section class="beef col-lg-4 col-md-6 col-sm-12">
+		<h3 id="beef">Beef</h3>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat.</p>
+	</section>
+
+	<section class="sushi col-lg-4 col-md-12 col-sm-12">
+		<h3 id="sushi">Sushi</h3>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat.</p>
+	</section>
+
+</div>
 
 </body>
 </html>
